--- a/MyNaggingMom/MyNaggingMom.csproj
+++ b/MyNaggingMom/MyNaggingMom.csproj
@@ -195,6 +195,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707050229322_InitialModel.cs" />
+    <Compile Include="Migrations\201707050229322_InitialModel.Designer.cs">
+      <DependentUpon>201707050229322_InitialModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201707050236060_CreateCatBox.cs" />
+    <Compile Include="Migrations\201707050236060_CreateCatBox.Designer.cs">
+      <DependentUpon>201707050236060_CreateCatBox.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CatBox.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -203,6 +212,7 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bootstrap-slate.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
@@ -280,6 +290,14 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201707050229322_InitialModel.resx">
+      <DependentUpon>201707050229322_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707050236060_CreateCatBox.resx">
+      <DependentUpon>201707050236060_CreateCatBox.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
