Deployed Code First Migrations to Azure

--- a/MyNaggingMom/MyNaggingMom.csproj
+++ b/MyNaggingMom/MyNaggingMom.csproj
@@ -224,6 +224,7 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="Properties\PublishProfiles\DoYourChoresJB - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\MyNaggingMom - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
