Cleaned up extra views and consolidated

--- a/DoYourChores/DoYourChores.csproj
+++ b/DoYourChores/DoYourChores.csproj
@@ -25,6 +25,7 @@
     <UseGlobalApplicationHostFile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <Use64BitIISExpress />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -45,6 +46,27 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CodeForce.Entities, Version=2.0.4231.17897, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\CodeForceLib.Utilities.Web.2.2\lib\CodeForce.Entities.dll</HintPath>
+    </Reference>
+    <Reference Include="CodeForce.Enums, Version=2.0.4231.17896, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\CodeForceLib.Utilities.Web.2.2\lib\CodeForce.Enums.dll</HintPath>
+    </Reference>
+    <Reference Include="CodeForce.Extensions, Version=2.0.4231.17897, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\CodeForceLib.Utilities.Web.2.2\lib\CodeForce.Extensions.dll</HintPath>
+    </Reference>
+    <Reference Include="CodeForce.Extensions.Controls.Web, Version=2.0.4231.12989, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\CodeForceLib.Utilities.Web.2.2\lib\CodeForce.Extensions.Controls.Web.dll</HintPath>
+    </Reference>
+    <Reference Include="CodeForce.Utilities, Version=2.0.4231.18318, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\CodeForceLib.Utilities.Web.2.2\lib\CodeForce.Utilities.dll</HintPath>
+    </Reference>
+    <Reference Include="CodeForce.WebUtilities, Version=2.0.4456.18257, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\CodeForceLib.Utilities.Web.2.2\lib\CodeForce.WebUtilities.dll</HintPath>
+    </Reference>
+    <Reference Include="HtmlAgilityPack, Version=1.4.0.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
+      <HintPath>..\packages\CodeForceLib.Utilities.Web.2.2\lib\HtmlAgilityPack.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.3\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
     </Reference>
@@ -203,6 +225,10 @@
     <Compile Include="Migrations\201707050236060_CreateCatBox.Designer.cs">
       <DependentUpon>201707050236060_CreateCatBox.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201710211855253_message added.cs" />
+    <Compile Include="Migrations\201710211855253_message added.Designer.cs">
+      <DependentUpon>201710211855253_message added.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CatBox.cs" />
@@ -270,11 +296,10 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
-    <Content Include="Views\CatBox\Clean.cshtml" />
-    <Content Include="Views\CatBox\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\CatBox\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -297,6 +322,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201707050236060_CreateCatBox.resx">
       <DependentUpon>201707050236060_CreateCatBox.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710211855253_message added.resx">
+      <DependentUpon>201710211855253_message added.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
